# patent_classification

./: .gitignore  README.md  pyproject.toml  test.ipynb
classifiersv2.egg-info/: PKG-INFO  SOURCES.txt
clf/: Dockerfile  docker-compose.yml  docker-compose_1.yml  docker-compose_2.yml  requirements.txt
clf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
clf/backend/: errors.json  main.py  models.py  scoring.py  unified_classifier.py
clf/frontend/: app.py  sidebar.py
