[project]
name = "clf"
dynamic = [
  "version",
]
description = "v2 patent classifiers"
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
  "uvicorn",
  "fastapi",
  "pydantic",
  "sentence-transformers",
  "python-multipart",
  "umap-learn[plot]",
  "scikit-learn==1.0.2",
  "nltk",
  "loguru",
  "keras",
  "tensorflow",
]
